# route_view

./: .gitignore  TODO  prof  requirements.txt  setup.cfg
path_view/: auth.py  core.py  gpx.py  point.py  serve.py  util.py  web_app.py
path_view/static/: upload_form.html  view.html  view.js
path_view/tests/: __init__.py  test_core.py  test_gpx.py
route_view/: auth.py  core.py  serve.py  util.py  web_app.py
route_view/static/: view.html  view.js
route_view/tests/: __init__.py  test_core.py  test_gpx.py
tests/: test_gpx.py
