[metadata]
name = path_view
author = Gary van der Merwe
author-email = garyvdm@gmail.com
summary = View Google Street View images along a path as a video.
description-file = README.md
home-page = https://github.com/garyvdm/path_view
license = AGPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python

[entry_points]
console_scripts =
    serve = path_view.serve:main
